--- a/IvA/Views/_ViewImports.cshtml
+++ b/IvA/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using IvA
 @using IvA.Models
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
