--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - IvA</title>
+    <title>@ViewData["Title"] - Collab</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-red border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">IvA</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Collab</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Verwaltung">Verwaltung</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Projekte" asp-action="Index">Projekte</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ProjectUsersLogins" asp-action="Index">Andere Nutzer</a>
-                        </li>
-
+                        @if(this.User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Verwaltung">Verwaltung</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Projekte" asp-action="Index">Projekte</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ProjectUsersLogins" asp-action="Index">Andere Nutzer</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
@@ -46,7 +48,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - IvA - <a asp-area="" asp-controller="Home" asp-action="Impressum">Impressum</a>
+            &copy; 2020 - Collab - <a asp-area="" asp-controller="Home" asp-action="Impressum">Impressum</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
