Das Projekt-Dashboard wurde geändert

--- a/IvA/Views/Projekte/Index.cshtml
+++ b/IvA/Views/Projekte/Index.cshtml
@@ -2,7 +2,91 @@
     ViewData["Title"] = "Projekte";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Projektdashboard</h1>
-    <p>Behalten sie den Überblick! Ihre aktuellen Projekte: </p>
+<h1 align="center" class="display-4">Projektdashboard</h1>
+<p align="center">Behalten sie den Überblick! Ihre aktuellen Projekte: </palign="center">
+<div class="" row>
+
+
+    <div class="row">
+        <div class="col-md-5">
+
+            Projektfortschritt
+            <div style="padding:3px" class="text-left">
+                Pflicht Heft
+                <div class="progress" class="text-center">
+                    <div class="progress-bar" role="progressbar" style="width: 62%" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
+            <div style="padding:3px" class="text-left">
+                Construction Project
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
+            <div style="padding:3px" class="text-left">
+                Develop Project
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
+            <div style="padding:3px" class="text-left">
+                FrontEnd
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
+            <div style="padding:3px" class="text-left">
+                Project
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-md-offset-2">
+            <section>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>
+                                Termin
+                            </th>
+                            <th>
+                                Team
+                            </th>
+                            <th>
+                                Termin Date
+                            </th>
+                            <th>
+                                Beschreibung
+                            </th>
+                            <th>
+                                Status
+                            </th>                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        ToDo Liste                        
+                        <tr>
+                            <td>
+                                Vorbereitung
+                            </td>
+                            <td>
+                                Gruppe 1
+                            </td>
+                            <td>
+                                20/05/2020
+                            </td>
+                            <td>
+                                Der Fortschritt des Pflichtenheft muss vorgelegt werden
+                            </td>
+                            <td>
+                                offen
+                            </td>
+
+                        </tr>                        
+                    </tbody>
+                </table>
+            </section>
+        </div>
+    </div>
 </div>
