--- a/IvA/Views/Projekte/Index.cshtml
+++ b/IvA/Views/Projekte/Index.cshtml
@@ -1,92 +1,159 @@
-﻿@{
-    ViewData["Title"] = "Projekte";
+﻿@model IEnumerable<IvA.Models.Projekte>
+
+@{
+    ViewData["Title"] = "Index";
 }
 
-<h1 align="center" class="display-4">Projektdashboard</h1>
-<p align="center">Behalten sie den Überblick! Ihre aktuellen Projekte: </palign="center">
-<div class="" row>
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Projektname)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Projektersteller)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Mitglieder)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Beschreibung)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Deadline)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Status)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Projektname)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Projektersteller)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Mitglieder)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Beschreibung)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Deadline)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<p>
+    <h2 align="center" class="display-4">Projektdashboard</h2>
+<p align="center">
+    Behalten sie den Überblick! Ihre aktuellen Projekte: </palign="center">
+    <div class="" row>
 
 
-    <div class="row">
-        <div class="col-md-5">
+        <div class="row">
+            <div class="col-md-5">
 
-            Projektfortschritt
-            <div style="padding:3px" class="text-left">
-                Pflicht Heft
-                <div class="progress" class="text-center">
-                    <div class="progress-bar" role="progressbar" style="width: 62%" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
+                Projektfortschritt
+                <div style="padding:3px" class="text-left">
+                    Pflicht Heft
+                    <div class="progress" class="text-center">
+                        <div class="progress-bar" role="progressbar" style="width: 62%" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div style="padding:3px" class="text-left">
+                    Construction Project
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div style="padding:3px" class="text-left">
+                    Develop Project
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div style="padding:3px" class="text-left">
+                    FrontEnd
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div style="padding:3px" class="text-left">
+                    Project
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                 </div>
             </div>
-            <div style="padding:3px" class="text-left">
-                Construction Project
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-            </div>
-            <div style="padding:3px" class="text-left">
-                Develop Project
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-            </div>
-            <div style="padding:3px" class="text-left">
-                FrontEnd
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-            </div>
-            <div style="padding:3px" class="text-left">
-                Project
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-md-offset-2">
-            <section>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                Termin
-                            </th>
-                            <th>
-                                Team
-                            </th>
-                            <th>
-                                Termin Date
-                            </th>
-                            <th>
-                                Beschreibung
-                            </th>
-                            <th>
-                                Status
-                            </th>                            
-                        </tr>
-                    </thead>
-                    <tbody>
-                        ToDo Liste                        
-                        <tr>
-                            <td>
-                                Vorbereitung
-                            </td>
-                            <td>
-                                Gruppe 1
-                            </td>
-                            <td>
-                                20/05/2020
-                            </td>
-                            <td>
-                                Der Fortschritt des Pflichtenheft muss vorgelegt werden
-                            </td>
-                            <td>
-                                offen
-                            </td>
+            <div class="col-md-6 col-md-offset-2">
+                <section>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>
+                                    Termin
+                                </th>
+                                <th>
+                                    Team
+                                </th>
+                                <th>
+                                    Termin Date
+                                </th>
+                                <th>
+                                    Beschreibung
+                                </th>
+                                <th>
+                                    Status
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            ToDo Liste
+                            <tr>
+                                <td>
+                                    Vorbereitung
+                                </td>
+                                <td>
+                                    Gruppe 1
+                                </td>
+                                <td>
+                                    20/05/2020
+                                </td>
+                                <td>
+                                    Der Fortschritt des Pflichtenheft muss vorgelegt werden
+                                </td>
+                                <td>
+                                    offen
+                                </td>
 
-                        </tr>                        
-                    </tbody>
-                </table>
-            </section>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
+            </div>
         </div>
     </div>
-</div>
+
+</p>
