Funktionen im Bereich Projektverwaltung angepasst. Projekte werden jetzt mit dem aktuellen Datum erstellt. Es können nur spzifische Felder verändert werden

--- a/IvA/Views/Home/Index.cshtml
+++ b/IvA/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Ja moin";
+    ViewData["Title"] = "Collab - Follow your Project";
 }
 
-<div class="text-center">
+<div class="text-center" >
     <h1 class="display-4">Willkommen</h1>
     <p>im besten Projektmanagement System aller Zeiten.</p>
 </div>
+
