--- a/IvA/Views/Projekte/Create.cshtml
+++ b/IvA/Views/Projekte/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IvA.Models.Projekte
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Projekterstellung";
 }
 
-<h1>Create</h1>
+<h1>Erstellen sie ein neues Projekt</h1>
 
 <h4>Projekte</h4>
 <hr />
