--- a/IvA/Views/Projekte/Delete.cshtml
+++ b/IvA/Views/Projekte/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IvA.Models.Projekte
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Projekt löschen";
 }
 
-<h1>Delete</h1>
+<h2 style="padding-bottom:25px">Projekt löschen</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4 style="padding-bottom:25px">Wollen sie das Projekt wirklich löschen?</h4>
 <div>
-    <h4>Projekte</h4>
+    <h4>Projektdetails:</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -51,7 +51,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Projekt löschen" class="btn btn-danger" /> |
+        <a asp-action="Index">Zurück zur Projektübersicht</a>
     </form>
 </div>
