Der Status kann jetzt aus einer Drop Down Liste ausgewählt werden

--- a/IvA/Views/Projekte/Edit.cshtml
+++ b/IvA/Views/Projekte/Edit.cshtml
@@ -50,7 +50,11 @@
 
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
+                <select asp-for="Status" class="form-control">
+                    <option value="To Do">To Do</option>
+                    <option value="In Bearbeitung">In Bearbeitung</option>
+                    <option value="Fertig">Fertig</option>
+                </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
 
