Layout Projekte und CSS

--- a/IvA/Views/Home/Index.cshtml
+++ b/IvA/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Collab - Follow your Project";
+ViewData["Title"] = "Collab - Follow your Project";
 }
 
-<div class="text-center" >
+<div class="text-center">
     <h1 class="display-4">Willkommen</h1>
     <p>im besten Projektmanagement System aller Zeiten.</p>
+    <img src="~/img/collab.png" alt="lul">
 </div>
 
