--- a/IvA/Views/Projekte/Edit.cshtml
+++ b/IvA/Views/Projekte/Edit.cshtml
@@ -66,6 +66,7 @@
 
             <div class="form-group">
                 <input type="submit" value="Änderungen speichern" class="btn btn-primary" />
+                <button class="btn btn-danger" asp-action="Delete" asp-route-id="item.Id">Projekt löschen</button>
             </div>
         </form>
     </div>
