--- a/IvA/wwwroot/css/site.css
+++ b/IvA/wwwroot/css/site.css
@@ -2,9 +2,10 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+    color: white;
 }
 
 /* Provide sufficient contrast against white background */
@@ -35,6 +36,34 @@ html {
   }
 }
 
+h1 {
+    color: white;
+}
+
+h2 {
+  color: white;
+}
+
+a {
+  color: white;
+}
+
+p {
+    color: white;
+}
+
+.table {
+    color: white;
+}
+
+navbar-brand{
+    color: white;
+}
+
+a.navbar-brand {
+    color: white;
+}
+
 .border-top {
   border-top: 1px solid #e5e5e5;
 }
@@ -59,8 +88,9 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-color: #000000;
 }
 .footer {
   position: absolute;
