--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-red border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">COLLAB</a>
+                <a class="navbar-brand" id="collab" asp-area="" asp-controller="Home" asp-action="Index"><span class="col">Col</span><span class="lab">lab</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
