--- a/IvA/Views/Projekte/Index.cshtml
+++ b/IvA/Views/Projekte/Index.cshtml
@@ -10,6 +10,7 @@
 
 <p style="padding-top:25px ; padding-bottom: 25px">
     <a asp-action="Create">Neues Projekt erstellen</a>
+    <button class="btn btn-primary" asp-action="Create">Neues Projekt erstellen</button>
 </p>
 <table class="table">
     <thead>
