Roles und Adminpanel

--- a/IvA/Views/Projekte/Index.cshtml
+++ b/IvA/Views/Projekte/Index.cshtml
@@ -44,7 +44,7 @@
         {
         <tr>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">@item.Projektname</a>
+                <a asp-action="Details" asp-route-id="@item.Id">@item.Projektname</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Projektersteller)
