--- a/IvA/Views/ArbeitsPaket/Index.cshtml
+++ b/IvA/Views/ArbeitsPaket/Index.cshtml
@@ -19,7 +19,7 @@
                 {
                     if (item.Status == "To do")
                     {
-                        <li class="list-group-item"><a asp-action="Details" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></li>
+                        <li class="list-group-item list-group-item-light"><a asp-action="Details" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></li>
                     }
                 }
             </ul>
@@ -33,7 +33,7 @@
                 {
                     if (item.Status == "In Bearbeitung")
                     {
-                         <li class="list-group-item"><a asp-action="Details" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></li>
+                         <li class="list-group-item list-group-item-light"><a asp-action="Details" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></li>
                     }
                 }
             </ul>
@@ -47,7 +47,7 @@
                 {
                     if (item.Status == "Fertig")
                     {
-                        <li class="list-group-item"><a asp-action="Details" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></li>
+                        <li class="list-group-item list-group-item-light"><a asp-action="Details" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></li>
                     }
                 }
             </ul>
