--- a/IvA/Views/Projekte/Details.cshtml
+++ b/IvA/Views/Projekte/Details.cshtml
@@ -55,6 +55,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Anpassen</a> |
-    <a asp-action="Index">Zurück zur Projektübersicht</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Anpassen</a>
+    <a class="btn btn-primary" asp-action="Index">Zurück zur Projektübersicht</a>
 </div>
