--- a/IvA/Views/Projekte/Index.cshtml
+++ b/IvA/Views/Projekte/Index.cshtml
@@ -9,8 +9,7 @@
 </h2>
 
 <p style="padding-top:25px ; padding-bottom: 25px">
-    <a asp-action="Create">Neues Projekt erstellen</a>
-    <button class="btn btn-primary" asp-action="Create">Neues Projekt erstellen</button>
+    <a class="btn btn-primary" asp-action="Create">Neues Projekt erstellen</a>
 </p>
 <div class="card-columns">
     @foreach (var item in Model)
