--- a/IvA/Views/ArbeitsPaket/Details.cshtml
+++ b/IvA/Views/ArbeitsPaket/Details.cshtml
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ArbeitsPaketId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.ArbeitsPaketId">Bearbeiten</a> |
+    <a class="btn btn-primary" asp-action="Index">Zurück</a>
 </div>
