--- a/IvA/Views/Admin/ListUsers.cshtml
+++ b/IvA/Views/Admin/ListUsers.cshtml
@@ -8,7 +8,25 @@
 
 <h1>Nutzerverwaltung</h1>
 
-
+<div class="modal" id="deleteModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Warnung</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modalBody">
+                <p>Wollen Sie den Nutzer wirklich löschen? Dieser Vorgang ist nicht umkehrbar.</p>
+            </div>
+            <div class="modal-footer">
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="item.Id">Löschen</a>
+                <button type="button" id="deleteButn" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 <table class="table">
     <thead>
         <tr>
@@ -36,7 +54,8 @@
                 <td>
                     @if (!User.Identity.Name.Equals(item.UserName))
                     {
-                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Löschen</a>
+                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="item.Id">Löschen</a>
+                        <a href="#deleteModal" data-toggle="modal" data-whatever="@item.Id" user-id="@item.Id">Open Modal</a>
                     }
                 </td>
             </tr>
