--- a/IvA/Views/ArbeitsPaket/Create.cshtml
+++ b/IvA/Views/ArbeitsPaket/Create.cshtml
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Zurück zur Projektübersicht</a>
 </div>
 
 @section Scripts {
