--- a/IvA/Views/Projekte/Create.cshtml
+++ b/IvA/Views/Projekte/Create.cshtml
@@ -6,6 +6,7 @@
 
 <h1>Erstellen sie ein neues Projekt</h1>
 
+
 <h4>Projekte</h4>
 <hr />
 <div class="row">
@@ -19,7 +20,10 @@
             </div>          
             <div class="form-group">
                 <label asp-for="Mitglieder" class="control-label"></label>
-                <input asp-for="Mitglieder" class="form-control" />
+                <select asp-for="Mitglieder" class="form-control">
+
+                    <option value="this.User.Identity.Name;">this.User.Identity.Name;</option>
+                </select>
                 <span asp-validation-for="Mitglieder" class="text-danger"></span>
             </div>
             <div class="form-group">
