--- a/IvA/Views/Projekte/Index.cshtml
+++ b/IvA/Views/Projekte/Index.cshtml
@@ -4,29 +4,33 @@
     ViewData["Title"] = "Projektübersicht";
 }
 <h2 align="center" class="display-4">Projektdashboard</h2>
-<h2 style="padding-top:25px">Behalten sie die Übersicht über ihre Projekte. <br />
+<h2 style="padding-top:25px">
+    Behalten sie die Übersicht über ihre Projekte. <br />
     Erstellen und Verwalten sie flexibel Projekte und Arbeitspakete.
 </h2>
 
 <p style="padding-top:25px ; padding-bottom: 25px">
-    <a asp-action="Create">Neues Projekt erstellen</a>
-    <button class="btn btn-primary" asp-action="Create">Neues Projekt erstellen</button>
+    <a class="btn btn-primary" asp-action="Create">Neues Projekt erstellen</a>
 </p>
 <div class="card-columns">
     @foreach (var item in Model)
     {
-    <div class="card bg-secondary">
-        <div class="card-header text-center"><a asp-action="Details" asp-route-id="@item.Id">@item.Projektname</a></div>
-        <div class="card-body text-center">
-            <p class="card-text">@item.Beschreibung</p>
+        <div class="card bg-secondary">
+            <div class="card-header text-center"><a asp-action="Details" asp-route-id="@item.Id">@item.Projektname</a></div>
+            <div class="card-body text-center">
+                <p class="card-text">@item.Beschreibung</p>
+            </div>
+            <div class="card-footer">
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="card-footer">
-            <div class="progress">
-                 <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                 </div></div></div>
-    </div>
     }
- </div>
+</div>
+<!-- Eventuell kann man diese Ansicht noch zum Debuggen verwenden 
+
 <table class="table">
     <thead>
         <tr>
@@ -83,95 +87,4 @@
         }
     </tbody>
 </table>
-
-<p style="padding-top : 50px">
-    
-
-    <div class="" row>
-
-
-        <div class="row">
-            <div class="col-md-5">
-
-                Projektfortschritt
-                <div style="padding:3px" class="text-left">
-                    Pflicht Heft
-                    <div class="progress" class="text-center">
-                        <div class="progress-bar" role="progressbar" style="width: 62%" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-                <div style="padding:3px" class="text-left">
-                    Construction Project
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-                <div style="padding:3px" class="text-left">
-                    Develop Project
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-                <div style="padding:3px" class="text-left">
-                    FrontEnd
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-                <div style="padding:3px" class="text-left">
-                    Project
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-md-offset-2">
-                <section>
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>
-                                    Termin
-                                </th>
-                                <th>
-                                    Team
-                                </th>
-                                <th>
-                                    Termin Date
-                                </th>
-                                <th>
-                                    Beschreibung
-                                </th>
-                                <th>
-                                    Status
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            ToDo Liste
-                            <tr>
-                                <td>
-                                    Vorbereitung
-                                </td>
-                                <td>
-                                    Gruppe 1
-                                </td>
-                                <td>
-                                    20/05/2020
-                                </td>
-                                <td>
-                                    Der Fortschritt des Pflichtenheft muss vorgelegt werden
-                                </td>
-                                <td>
-                                    offen
-                                </td>
-
-                            </tr>
-                        </tbody>
-                    </table>
-                </section>
-            </div>
-        </div>
-    </div>
-
-</p>
+    -->
