ProjekteID und VieModel ID in den Views angepasst / Tabellen angepasst

--- a/IvA/Views/ArbeitsPaket/Index.cshtml
+++ b/IvA/Views/ArbeitsPaket/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IvA.Models.ArbeitsPaket>
+﻿@model IEnumerable<IvA.Models.ArbeitsPaketModel>
 
 @{
     ViewData["Title"] = "Index";
