--- a/IvA/Views/Projekte/Details.cshtml
+++ b/IvA/Views/Projekte/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model IvA.Models.Projekte
+﻿@model IvA.Models.ProjekteModel
 
 @{
     ViewData["Title"] = "Projektdetails";
@@ -55,6 +55,6 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Anpassen</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.ProjekteId">Anpassen</a>
     <a class="btn btn-primary" asp-action="Index">Zurück zur Projektübersicht</a>
 </div>
